<resources>
    <string name="app_name">云闪通</string>
    <string name="title_dialer">电话</string>
    <string name="title_contact">联系人</string>
    <string name="title_notifications">Notifications</string>

    <!--dialView description -->
    <string name="dialpad_0" translatable="false">0</string>
    <string name="dialpad_1" translatable="false">1</string>
    <string name="dialpad_2" translatable="false">2</string>
    <string name="dialpad_3" translatable="false">3</string>
    <string name="dialpad_4" translatable="false">4</string>
    <string name="dialpad_5" translatable="false">5</string>
    <string name="dialpad_6" translatable="false">6</string>
    <string name="dialpad_7" translatable="false">7</string>
    <string name="dialpad_8" translatable="false">8</string>
    <string name="dialpad_9" translatable="false">9</string>
    <string name="dialpad_abc" translatable="false">ABC</string>
    <string name="dialpad_def" translatable="false">DEF</string>
    <string name="dialpad_ghi" translatable="false">GHI</string>
    <string name="dialpad_jkl" translatable="false">JKL</string>
    <string name="dialpad_mno" translatable="false">MNO</string>
    <string name="dialpad_pqrs" translatable="false">PQRS</string>
    <string name="dialpad_tuv" translatable="false">TUV</string>
    <string name="dialpad_wxyz" translatable="false">WXYZ</string>
    <string name="dialpad_add" translatable="false">+</string>
    <string name="dialpad_star" translatable="false">*</string>
    <string name="dialpad_pound" translatable="false">#</string>
    <string name="login_tip">沟通无极限  理解无止境</string>
    <string name="login_please_input_phone_num">请输入手机号码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="login_please_input_verify_code">请输入验证码</string>
    <string name="login_button_text">登录</string>
    <string name="not_open_permission">权限未开启</string>
    <string name="open_overlays_tip">为保证拨号和接听的正常使用，请打开悬浮窗权限</string>
    <string name="open_self_auto_open_tip">为保证拨号和接听的正常使用，请打开应用<font color="#FF0000">自启动</font>权限</string>
    <string name="checked_new_version">发现新版本</string>
</resources>