<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="220dp">
    <LinearLayout
        android:id="@+id/dialpad_layout_1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/dialpad_1"
            style="@style/BorderlessBackgroud"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/dialpad_1"
            android:gravity="center"
            android:orientation="vertical"
            android:soundEffectsEnabled="false">

            <TextView
                android:id="@+id/dialpad_number_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/dialpad_1"
                android:textColor="@color/white"
                android:textSize="@dimen/dialpad_digit_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-2dp"
                android:includeFontPadding="false"
                android:textColor="@color/text_color_secondary"
                android:textSize="@dimen/dialpad_letters_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialpad_2"
            style="@style/BorderlessBackgroud"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/dialpad_2"
            android:gravity="center"
            android:orientation="vertical"
            android:soundEffectsEnabled="false">

            <TextView
                android:id="@+id/dialpad_number_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/dialpad_2"
                android:textColor="@color/white"
                android:textSize="@dimen/dialpad_digit_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-2dp"
                android:includeFontPadding="false"
                android:text="@string/dialpad_abc"
                android:textColor="@color/text_color_secondary"
                android:textSize="@dimen/dialpad_letters_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialpad_3"
            style="@style/BorderlessBackgroud"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/dialpad_3"
            android:gravity="center"
            android:orientation="vertical"
            android:soundEffectsEnabled="false">

            <TextView
                android:id="@+id/dialpad_number_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/dialpad_3"
                android:textColor="@color/white"
                android:textSize="@dimen/dialpad_digit_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-2dp"
                android:includeFontPadding="false"
                android:text="@string/dialpad_def"
                android:textColor="@color/text_color_secondary"
                android:textSize="@dimen/dialpad_letters_text_size" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialpad_layout_2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/dialpad_4"
            style="@style/BorderlessBackgroud"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/dialpad_4"
            android:gravity="center"
            android:orientation="vertical"
            android:soundEffectsEnabled="false">

            <TextView
                android:id="@+id/dialpad_number_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/dialpad_4"
                android:textColor="@color/white"
                android:textSize="@dimen/dialpad_digit_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-2dp"
                android:includeFontPadding="false"
                android:text="@string/dialpad_ghi"
                android:textColor="@color/text_color_secondary"
                android:textSize="@dimen/dialpad_letters_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialpad_5"
            style="@style/BorderlessBackgroud"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/dialpad_5"
            android:gravity="center"
            android:orientation="vertical"
            android:soundEffectsEnabled="false">

            <TextView
                android:id="@+id/dialpad_number_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/dialpad_5"
                android:textColor="@color/white"
                android:textSize="@dimen/dialpad_digit_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-2dp"
                android:includeFontPadding="false"
                android:text="@string/dialpad_jkl"
                android:textColor="@color/text_color_secondary"
                android:textSize="@dimen/dialpad_letters_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialpad_6"
            style="@style/BorderlessBackgroud"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/dialpad_6"
            android:gravity="center"
            android:orientation="vertical"
            android:soundEffectsEnabled="false">

            <TextView
                android:id="@+id/dialpad_number_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/dialpad_6"
                android:textColor="@color/white"
                android:textSize="@dimen/dialpad_digit_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-2dp"
                android:includeFontPadding="false"
                android:text="@string/dialpad_mno"
                android:textColor="@color/text_color_secondary"
                android:textSize="@dimen/dialpad_letters_text_size" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialpad_layout_3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/dialpad_7"
            style="@style/BorderlessBackgroud"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/dialpad_7"
            android:gravity="center"
            android:orientation="vertical"
            android:soundEffectsEnabled="false">

            <TextView
                android:id="@+id/dialpad_number_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/dialpad_7"
                android:textColor="@color/white"
                android:textSize="@dimen/dialpad_digit_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-2dp"
                android:includeFontPadding="false"
                android:text="@string/dialpad_pqrs"
                android:textColor="@color/text_color_secondary"
                android:textSize="@dimen/dialpad_letters_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialpad_8"
            style="@style/BorderlessBackgroud"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/dialpad_8"
            android:gravity="center"
            android:orientation="vertical"
            android:soundEffectsEnabled="false">

            <TextView
                android:id="@+id/dialpad_number_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/dialpad_8"
                android:textColor="@color/white"
                android:textSize="@dimen/dialpad_digit_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-2dp"
                android:includeFontPadding="false"
                android:text="@string/dialpad_tuv"
                android:textColor="@color/text_color_secondary"
                android:textSize="@dimen/dialpad_letters_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialpad_9"
            style="@style/BorderlessBackgroud"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/dialpad_9"
            android:gravity="center"
            android:orientation="vertical"
            android:soundEffectsEnabled="false">

            <TextView
                android:id="@+id/dialpad_number_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/dialpad_9"
                android:textColor="@color/white"
                android:textSize="@dimen/dialpad_digit_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-2dp"
                android:includeFontPadding="false"
                android:text="@string/dialpad_wxyz"
                android:textColor="@color/text_color_secondary"
                android:textSize="@dimen/dialpad_letters_text_size" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialpad_layout_4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialpad_star"
            style="@style/BorderlessBackgroud"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:paddingTop="8dp"
            android:soundEffectsEnabled="false"
            android:text="@string/dialpad_star"
            android:textColor="@color/white"
            android:textSize="@dimen/dialpad_star_text_size" />

        <LinearLayout
            android:id="@+id/dialpad_0"
            style="@style/BorderlessBackgroud"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/dialpad_0"
            android:gravity="center"
            android:orientation="vertical"
            android:soundEffectsEnabled="false">

            <TextView
                android:id="@+id/dialpad_number_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/dialpad_0"
                android:textColor="@color/white"
                android:textSize="@dimen/dialpad_digit_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-2dp"
                android:includeFontPadding="false"
                android:text="@string/dialpad_add"
                android:textColor="@color/text_color_secondary"
                android:textSize="@dimen/dialpad_letters_text_size" />
        </LinearLayout>

        <TextView
            android:id="@+id/dialpad_pound"
            style="@style/BorderlessBackgroud"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:soundEffectsEnabled="false"
            android:text="@string/dialpad_pound"
            android:textColor="@color/white"
            android:textSize="@dimen/dialpad_pound_text_size" />
    </LinearLayout>
</LinearLayout>