<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data class="LoginBinding">
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_big_common"
        tools:context=".activity.login.LoginActivity">

        <ImageView
            android:id="@+id/iv_login_logo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@mipmap/icon_launcher"
            android:layout_marginBottom="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_login_tip"/>
        <TextView
            android:id="@+id/tv_login_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_tip"
            android:textColor="@color/c888888"
            android:textSize="14sp"
            android:layout_marginBottom="50dp"
            android:includeFontPadding="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/loginContainer"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loginContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="30.5dp"
            android:layout_marginRight="30.5dp">

            <!--手机号-->
            <EditText
                android:id="@+id/phoneNumEt"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:paddingLeft="3.5dp"
                android:background="@null"
                android:hint="@string/login_please_input_phone_num"
                android:drawableLeft="@drawable/icon_phone"
                android:drawablePadding="16dp"
                android:inputType="number|phone"
                android:textColorHint="@color/cC2C2C2"
                android:textSize="16sp"
                android:textColor="@color/c333333"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
            <ImageView
                android:id="@+id/clearPhoneBt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_clear_edit_icon"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="@id/phoneNumEt"
                app:layout_constraintBottom_toBottomOf="@id/phoneNumEt"
                app:layout_constraintRight_toRightOf="parent"/>
            <View
                android:id="@+id/phoneDivider"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/cdbdbdb"
                app:layout_constraintTop_toBottomOf="@id/phoneNumEt"/>

            <!--验证码-->
            <TextView
                android:id="@+id/codeVerifyBt"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginTop="17dp"
                android:text="@string/get_verify_code"
                android:gravity="center_vertical|right"
                android:textColor="@color/c4CA4FF"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/phoneDivider"
                app:layout_constraintRight_toRightOf="parent"/>
            <EditText
                android:id="@+id/codeVerifyEt"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:paddingLeft="3.5dp"
                android:background="@null"
                android:drawableLeft="@drawable/icon_pwd"
                android:drawablePadding="16dp"
                android:hint="@string/login_please_input_verify_code"
                android:inputType="number"
                android:textColorHint="@color/cC2C2C2"
                android:textSize="16sp"
                android:textColor="@color/c333333"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/codeVerifyBt"
                app:layout_constraintTop_toTopOf="@id/codeVerifyBt"
                app:layout_constraintBottom_toBottomOf="@id/codeVerifyBt"/>
            <View
                android:id="@+id/verifyDivider"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/cdbdbdb"
                app:layout_constraintTop_toBottomOf="@id/codeVerifyEt"/>

<!--            <LinearLayout-->
<!--                android:id="@+id/agreement"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:layout_constraintLeft_toLeftOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@id/verifyDivider"-->
<!--                android:layout_marginTop="25.5dp">-->
<!--                <ImageView-->
<!--                    android:id="@+id/agreementCheck"-->
<!--                    android:layout_width="21.5dp"-->
<!--                    android:layout_height="21.5dp"-->
<!--                    android:layout_gravity="center_vertical"-->
<!--                    android:src="@drawable/selector_login_checkbox" />-->
<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/agree_privacy"-->
<!--                    android:paddingLeft="10dp"-->
<!--                    android:textColor="@color/c888888"-->
<!--                    android:textSize="18sp"-->
<!--                    android:includeFontPadding="false"-->
<!--                    android:layout_gravity="center_vertical"/>-->
<!--                <TextView-->
<!--                    android:id="@+id/userRule"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/agree_privacy_user"-->
<!--                    android:textColor="@color/c4CA4FF"-->
<!--                    android:textSize="18sp"-->
<!--                    android:includeFontPadding="false"-->
<!--                    android:layout_gravity="center_vertical"/>-->
<!--            </LinearLayout>-->

            <TextView
                android:id="@+id/loginBt"
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:text="@string/login_button_text"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:gravity="center"
                android:background="@drawable/ic_login_bt"
                android:layout_marginTop="36dp"
                app:layout_constraintTop_toBottomOf="@id/verifyDivider"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
